Fixed team h3 horizontal overflow; top: 10% -> margin-left: 10%

--- a/styles/main.css
+++ b/styles/main.css
@@ -291,8 +291,7 @@ nav {
 }
 
 #team > h1 {
-    position: relative;
-    left: 10%;
+    margin-left: 10%;
     transition-property: opacity;
     transition-duration: 5s;
     opacity: 0;
